tests/call/bool.rev
true() // error: only functions and structures are callable